--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               border-bottom: 1px solid red;
               box-shadow: 2px 2px 3px red}">
     <p> I am a passionate of music, I love to travel all over the world and I love playing volleyball. I am currentlly studying at ESSEC business school.</p>
-    <a href="http://www.ffvb.org/" class="btn-blue">My favorite website </a>
+    <a href="http://www.ffvb.org/" class="btn-blue" target="_blank">My favorite website </a>
    </div>
   
 
