--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
     box-shadow: 2px 2px 3px red}"> 
    <h2>My social networks</h2>
     <ul class="list-inline">
-     <li><a href="https://www.facebook.com/profile.php?id=100005289338516"> 
+     <li><a href="https://www.facebook.com/profile.php?id=100005289338516" target="_blank"> 
      	<i class="fab fa-facebook"></i>
          </a> 
      </li>	
-     <li><a href="https://www.instagram.com/_elchapou_">
+     <li><a href="https://www.instagram.com/_elchapou_" target="_blank">
      	<i class="fab fa-instagram"></i>
          </a>
      </li>
